Fix up gradle